@@ -1,3 +1,13 @@
+2000-03-17  Matti Aarnio  <mea@mea.tmt.tele.fi>
+
+	* transports/libta/swriteheaders.c:
+	    Eugene Crosser spotted CHUNKING mode problem with
+	    message header TAB expansion.  Outch!
+
+	* router/router.c:  logit()
+	    Changed  stdout  written log printf() format so that
+	    quite large lists of addresses are allowed.
+
 2000-03-15  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
 	* configure.in, transports/mailbox/mailbox.c:
